--- a/common/bibliography.bib
+++ b/common/bibliography.bib
@@ -20,7 +20,7 @@
 
 @article{schussnig2025matrixfree,
   title = {Matrix-free higher-order finite element methods for hyperelasticity},
-  author = {Schussnig, R. and Fehn, N. and Munch, P. and Kronbichler, M.},
+  author = {Schussnig, Richard and Fehn, Niklas and Munch, Peter and Kronbichler, Martin},
   year = {2025},
   month = feb,
   journal = {Computer Methods in Applied Mechanics and Engineering},
