Progress report draft

--- a/common/deliverable.sty
+++ b/common/deliverable.sty
@@ -12,7 +12,7 @@
 \RequirePackage{tabularx}
 \RequirePackage{geometry}
 \RequirePackage{enumitem}
-\RequirePackage[round]{natbib}
+\RequirePackage{natbib}
 \RequirePackage[print-unity-mantissa=false]{siunitx}
 
 % Define custom commands
