--- a/D5.2/D5.2_progress_report.tex
+++ b/D5.2/D5.2_progress_report.tex
@@ -592,7 +592,7 @@ If successful, this will provide support for exploring high-order discretization
 
 \noindent\textbf{Key achievements}
 
-The POLIMI team is working on migrating the lifex solvers to deal.II's matrix-free infrastructure, and is extensively refactoring the code organization towards this goal. In the new implementation, each concrete PDE model (such as cardiac electrophysiology, muscular mechanics or myocardial perfusion) builds upon the same abstract software components (i.e., it is derived from the same classes), as opposed to the old implementation, where different models would often reimplement common tasks (such as the initialization of finite element spaces or linear system assembly). Besides significantly improving the code organization and its maintainability, this centralized structure significantly facilitates the implementation of new physical models and their improvement, and overall provides a structured scaffolding for the future library developments.
+The POLIMI team is working on migrating the lifex~\cite{lifex2.0} solvers to deal.II's matrix-free infrastructure, and is extensively refactoring the code organization towards this goal. In the new implementation, each concrete PDE model (such as cardiac electrophysiology, muscular mechanics or myocardial perfusion) builds upon the same abstract software components (i.e., it is derived from the same classes), as opposed to the old implementation, where different models would often reimplement common tasks (such as the initialization of finite element spaces or linear system assembly). Besides significantly improving the code organization and its maintainability, this centralized structure significantly facilitates the implementation of new physical models and their improvement, and overall provides a structured scaffolding for the future library developments.
 
 The abstract physical model classes at the core of this new implementation leverage deal.II's facilities to support many solver configurations in a flexible way: they allow for scalar- and vector-valued problems, linear and nonlinear, steady and unsteady, on hexahedral and tetrahedral meshes, and support both matrix-based and matrix-free solvers. Finite element evaluation tasks are carried out with the \texttt{dealii::FEEvaluation} class, instead of \texttt{dealii::FEValues} as done in the previous implementation. This enables a significant performance improvement already in the matrix-based solvers, thanks to the use of sum factorization, SIMD vectorization, and improved cache friendliness.
 
@@ -600,7 +600,14 @@ The solver for the monodomain problem of cardiac electrophysiology has been impl
 
 Additionally, we have migrated to the new implementation of the multicompartment Darcy solver for myocardial perfusion, and the solver for generating rule-based cardiac fiber architectures. Finally, we are in the process of extending this new framework to the cardiac mechanics solver, as well as coupling the latter to the Darcy model to simulate the behavior of a porous medium subjected to fluid flow.
 
-The upcoming work will follow along these lines, by progressively extending the new infrastructure to additional models (e.g. active force generation for muscular contraction) and introducing coupling between the existing models to build multiphysics simulations (e.g. electromechanics or poromechanics for myocardial perfusion). Complementary to this, we will proceed by expanding the set of numerical methods supported by the core solvers. Most notably, the code currently supports only black-box preconditioning methods (AMG, ILU, etc.), which are not well suited for the matrix-free solvers. Since preconditioning is crucial for the robustness and efficiency of cardiac mechanics solvers, this will be addressed shortly, by integrating a multigrid method within the new code.
+The upcoming work will follow along these lines, by progressively extending the new infrastructure to additional models (e.g. active force generation for muscular contraction) and introducing coupling between the existing models to build multiphysics simulations (e.g. electromechanics or poromechanics for myocardial perfusion). Complementary to this, we will proceed by expanding the set of numerical methods supported by the core solvers. Most notably, the code currently supports only black-box preconditioning methods (AMG, ILU, etc.), which are not well suited for the matrix-free solvers. Since preconditioning is crucial for the robustness and efficiency of cardiac mechanics solvers, this will be addressed shortly, by integrating a multigrid method within the new code. In addition, articles~\cite{bucelli2025, fumagalli2025} has been finalized in the coarse of this work.
+
+\begin{thebibliography}{10}
+	\bibitem{lifex2.0} M. Bucelli: ``The lifex library version 2.0''. \emph{Association for Computing Machinery (accepted)}, 2025, \href{https://doi.org/10.1145/3748817}{doi:10.1145/3748817}
+	\bibitem{bucelli2025} M. Bucelli, L. Ded\`e: ``Coupling models of resistive valves to muscle mechanics in cardiac fluid-structure interaction simulations''. \emph{arXiv Preprint}, 2025, \href{https://https://arxiv.org/abs/2506.03869}{arXiv:2506.03869}
+	\bibitem{fumagalli2025} I. Fumagalli, l. Ded\`e, A. Quarteroni: ``A reduced 3D-0D fluid–structure interaction model of the aortic valve that includes leaflet curvature''. \emph{Biomechanics and Modeling in Mechanobiology}, 2025, 24, pp. 1169-1189 \href{https://doi.org/10.1007/s10237-025-01960-9}{doi:10.1007/s10237-025-01960-9}
+\end{thebibliography}
+
 
 \subsubsection*{WP2.3 Brain: Exascale simulations of brain tissue mechanics}
 
