--- a/D5.2/D5.2_progress_report.tex
+++ b/D5.2/D5.2_progress_report.tex
@@ -605,7 +605,7 @@ The upcoming work will follow along these lines, by progressively extending the 
 \begin{thebibliography}{10}
 	\bibitem{lifex2.0} M. Bucelli: ``The lifex library version 2.0''. \emph{Association for Computing Machinery (accepted)}, 2025, \href{https://doi.org/10.1145/3748817}{doi:10.1145/3748817}
 	\bibitem{bucelli2025} M. Bucelli, L. Ded\`e: ``Coupling models of resistive valves to muscle mechanics in cardiac fluid-structure interaction simulations''. \emph{arXiv Preprint}, 2025, \href{https://https://arxiv.org/abs/2506.03869}{arXiv:2506.03869}
-	\bibitem{fumagalli2025} I. Fumagalli, l. Ded\`e, A. Quarteroni: ``A reduced 3D-0D fluid–structure interaction model of the aortic valve that includes leaflet curvature''. \emph{Biomechanics and Modeling in Mechanobiology}, 2025, 24, pp. 1169-1189 \href{https://doi.org/10.1007/s10237-025-01960-9}{doi:10.1007/s10237-025-01960-9}
+	\bibitem{fumagalli2025} I. Fumagalli, L. Ded\`e, A. Quarteroni: ``A reduced 3D-0D fluid–structure interaction model of the aortic valve that includes leaflet curvature''. \emph{Biomechanics and Modeling in Mechanobiology}, 2025, 24, pp. 1169-1189 \href{https://doi.org/10.1007/s10237-025-01960-9}{doi:10.1007/s10237-025-01960-9}
 \end{thebibliography}
 
 
