add VPH rebranding

--- a/D5.2/D5.2_progress_report.tex
+++ b/D5.2/D5.2_progress_report.tex
@@ -964,6 +964,7 @@ In addition, the consortium has benefited from the expertise of WIAS, which is l
 \item Social media (LinkedIn; active since M5 with 219 followers). More detailed stats will be provided in the first dissemination and communication report.
 \end{itemize}
 \item First communication materials produced: project flyer, presentation template, social media kit and a project poster.
+\item The VPH Institute is currently undergoing a rebranding process and will soon become \textit{VPH – The Society for In Silico Medicine}, reflecting a broader and more inclusive vision for the community.
 \end{itemize}
 
 \noindent\textbf{WP4.3: Dissemination activities}
@@ -973,12 +974,12 @@ In addition, the consortium has benefited from the expertise of WIAS, which is l
 \item Dissemination was supported via VPH and partner institutional channels (websites, newsletters, social media).
 \end{itemize}
 
-\noindent\textbf{WP4.4: Stakeholder outreach and alignment with relevant EU initiatives and projects} % (M1–M27, Lead: VPHI).}  
+\noindent\textbf{WP4.4: Stakeholder outreach and alignment with relevant EU initiatives and projects} % (M1–M27, Lead: VPH).}  
 
 
 \begin{itemize}[left=1em, itemsep=0pt, topsep=0pt]
 \item Initial contacts established with key stakeholder groups, including clinicians, patients, industry, regulatory bodies, HTA organisations, payers, citizens, and policymakers.
-\item Project objectives presented through direct exchanges and dissemination via VPHI and partner channels.
+\item Project objectives presented through direct exchanges and dissemination via VPH and partner channels.
 \item First links established with complementary EU initiatives to ensure alignment, coherence, and maximise impact.
 \item Preparation of structured engagement activities (focus groups, surveys, interviews) to be launched in the next reporting period.
 \end{itemize}
